Overflow fix

--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -5,6 +5,7 @@
 font-family: 'Open Sans', sans-serif;
 overflow-x: hidden;
 }
+
 .mainobal {
 width: 1200px;
 background-color: #EDEDED;
@@ -26,7 +27,7 @@ border-bottom: 3px solid #157878;
 max-height: 70vh;
 }
 .pageSekce {
-height: 100vh;
+min-height: 100vh;
 
 }
 .onasSekce {
